src/test/ui/noncopyable-class.stderr
error[E0599]: no method named `clone` found for struct `Foo` in the current scope
  --> $DIR/noncopyable-class.rs:34:16
   |
LL | struct Foo {
   | ---------- method `clone` not found for this
...
LL |     let _y = x.clone();
   |                ^^^^^ method not found in `Foo`
   | 
  ::: $SRC_DIR/core/src/clone.rs:LL:COL
   |
LL |     fn clone(&self) -> Self;
   |        -----
   |        |
   |        the method is available for `std::sync::Arc<Foo>` here
   |        the method is available for `std::rc::Rc<Foo>` here
   |
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following trait defines an item `clone`, perhaps you need to implement it:
           candidate #1: `std::clone::Clone`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0599`.
